// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snippet parses an highlighted snippet attribute of hit object 1`] = `
<span
  className="ais-Highlight"
>
  <span
    className="ais-Highlight__nonHighlighted"
  >
    awesome 
  </span>
  <em
    className="ais-Highlight__highlighted"
  >
    hi
  </em>
  <span
    className="ais-Highlight__nonHighlighted"
  >
    ghlighted 
  </span>
  <em
    className="ais-Highlight__highlighted"
  >
    hi
  </em>
  <span
    className="ais-Highlight__nonHighlighted"
  >
    t!
  </span>
</span>
`;

exports[`Snippet renders a hit with a custom tag correctly 1`] = `
<span
  className="ais-Highlight"
>
  <span
    className="ais-Highlight__nonHighlighted"
  >
    awesome 
  </span>
  <strong
    className="ais-Highlight__highlighted"
  >
    hi
  </strong>
  <span
    className="ais-Highlight__nonHighlighted"
  >
    ghlighted 
  </span>
  <strong
    className="ais-Highlight__highlighted"
  >
    hi
  </strong>
  <span
    className="ais-Highlight__nonHighlighted"
  >
    t!
  </span>
</span>
`;
